Overflow bug fixed

--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -5,7 +5,7 @@ html {
     background-size: 100% 100%;
 }
 .home {
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 .listOfMovies {
     background-color: rgba(29, 29, 29, 0.6);
